# delphes-to-hdf5

./: .gitignore  LICENSE  README.md  environment.yaml  justfile  meson.build  setup.fish  setup.sh
src/: delphes-to-hdf5.cc  delphes_utils.cc  gen_utils.cc
